<resources>
    <string name="app_name">Kshethra</string>
    <string name="login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username!</string>
    <string name="invalid_name">Not a valid Name!</string>
    <string name="invalid_password">Not a valid password!</string>
    <string name="login_failed">"Login failed!"</string>
    <string name="connection_error">Connection error!</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="action_settings">Settings</string>
    <string name="password_content">Password must have minimum 8 characters contains at least one uppercase letter, one lowercase letter, one digit and one special character</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="members_list">Members List</string>
    <string name="familyheads_list">Family Heads List</string>
    <string name="add_member">Add Member</string>
    <string name="add_familyheads">Add Family Heads</string>
    <string name="log_out">Log Out</string>
    <string name="add_user">Add User</string>
    <string name="user_list">User List</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="create_user">Create User</string>
    <string name="edit_user">Edit User</string>
    <string name="save_user">Save User</string>
    <string name="account_deactivated">Account deactivated successfully.</string>
    <string name="account_activated">Account activated successfully.</string>
    <string name="head_deactivated">Family Head deactivated successfully.</string>
    <string name="head_activated">Family Head activated successfully.</string>
    <string name="inactive">Inactive : </string>
    <string name="active">Active : </string>
    <string name="create_head">Create Head</string>
    <string name="edit_head">Edit Head</string>
    <string name="save_head">Save Head</string>
    <string name="create_member">Create Member</string>
    <string name="edit_member">Edit Member</string>
    <string name="save_member">Save Member</string>
    <string name="is_a_family_head">Is a Family Head</string>
    <string name="house_name">House Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="landline">Landline</string>
    <string name="mobile_phone">Mobile Phone</string>
    <string name="gender">Gender</string>
    <string name="nakshathram">Nakshathram</string>
    <string name="family_head_name">Family Head Name</string>
    <string name="relation">Relation</string>
    <string name="select_gender">Select Gender</string>
    <string name="select_star">Select Nakshtra</string>
    <string name="select_relation">Select Relation</string>
    <string name="search_familyheads">Search Family Heads</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="invalid_housename">Not a valid House Name!</string>
    <string name="invalid_gender">Gender not selected!</string>
    <string name="invalid_dob">Date of Birth not selected!</string>
    <string name="invalid_star">Nakshathram not selected!</string>
    <string name="invalid_address1">Not a valid Address Line 1!</string>
    <string name="invalid_mobile">Not a valid Mobile Number!</string>
    <string name="invalid_familyHead">Family Head not selected!</string>
    <string name="invalid_relation">Relation not selected!</string>
    <string name="dont_find_add_new">Didn\'t find whom you are looking for ?  Add new Family Head.</string>
    <string name="please_wait">Please wait....</string>
    <string name="filter_nakshatra">Filter Nakshatra</string>
    <string name="no_records_found">No Records found!</string>
    <string name="show_all">SHOW ALL</string>
    <string name="member_deactivated">Member deactivated successfully.</string>
    <string name="member_activated">Member activated successfully.</string>
    <string name="select_photo">Select Photo</string>
    <string name="size_exceeded">Image file is too big!</string>
    <string name="photo_upload_failed">Photo upload failed!</string>
    <string name="deactivate">Deactivate</string>
    <string name="activate">Activate</string>
    <string name="upload_image">Update Image</string>
    <string name="upload">Upload</string>
    <string name="success">Update success.</string>
    <string name="failed">Update failed!</string>
    <string name="continue_txt">Continue</string>
    <string name="error_occured">Error occurred, please try again later</string>
</resources>
