<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <ScrollView
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.cardview.widget.CardView
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="30dp" >

                <com.sarathk.sk.kshethra.utilities.CircleImageView
                    android:id="@+id/circleImageView"
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/logo_default" />

                <TextView
                    android:maxLines="1"
                    android:paddingLeft="3dp"
                    android:paddingRight="3dp"
                    android:layout_marginTop="65dp"
                    android:gravity="center_horizontal"
                    android:textAllCaps="true"
                    android:textColor="@color/colorBlack"
                    android:id="@+id/nameTextView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/FontSizeFifteen" />

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:layout_marginTop="15dp">

                <androidx.cardview.widget.CardView
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?android:attr/selectableItemBackground"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:layout_margin="2dp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <LinearLayout
                        android:id="@+id/membersListView"
                        android:layout_height="match_parent"
                        android:layout_width="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:tint="#218bcf"
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:scaleType="fitXY"
                            android:src="@drawable/ic_list" />

                        <TextView
                            style="@style/FontSizeFourteen"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/members_list"
                            android:gravity="center"
                            android:textColor="#218bcf" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?android:attr/selectableItemBackground"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:layout_margin="2dp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <LinearLayout
                        android:id="@+id/addMemeberView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:scaleType="fitXY"
                            android:tint="#3ec991"
                            android:src="@drawable/ic_list_add" />

                        <TextView
                            style="@style/FontSizeFourteen"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/add_member"
                            android:gravity="center"
                            android:textColor="#3ec991" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp" >

                <androidx.cardview.widget.CardView
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?android:attr/selectableItemBackground"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:layout_margin="2dp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <LinearLayout
                        android:id="@+id/familyHeadsListView"
                        android:layout_height="match_parent"
                        android:layout_width="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:tint="#7e5074"
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:scaleType="fitXY"
                            android:src="@drawable/ic_list" />

                        <TextView
                            style="@style/FontSizeFourteen"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/familyheads_list"
                            android:gravity="center"
                            android:textColor="#7e5074" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?android:attr/selectableItemBackground"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:layout_margin="2dp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <LinearLayout
                        android:id="@+id/addFamilyHeadsView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:scaleType="fitXY"
                            android:tint="#5378aa"
                            android:src="@drawable/ic_list_add" />

                        <TextView
                            style="@style/FontSizeFourteen"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/add_familyheads"
                            android:gravity="center"
                            android:textColor="#5378aa" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp" >

                <androidx.cardview.widget.CardView
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?android:attr/selectableItemBackground"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:layout_margin="2dp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <LinearLayout
                        android:id="@+id/userListView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:tint="#ea8458"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:scaleType="fitXY"
                            android:src="@drawable/ic_list" />

                        <TextView
                            style="@style/FontSizeFourteen"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/user_list"
                            android:gravity="center"
                            android:textColor="#ea8458" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?android:attr/selectableItemBackground"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:layout_margin="2dp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <LinearLayout
                        android:id="@+id/addUserView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:tint="#f36468"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:scaleType="fitXY"
                            android:src="@drawable/ic_list_add" />

                        <TextView
                            style="@style/FontSizeFourteen"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/add_user"
                            android:gravity="center"
                            android:textColor="#f36468" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp">

                <androidx.cardview.widget.CardView
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?android:attr/selectableItemBackground"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:layout_margin="2dp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <LinearLayout
                        android:id="@+id/logoutView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:tint="#3ec991"
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:scaleType="fitXY"
                            android:src="@drawable/ic_logout" />

                        <TextView
                            style="@style/FontSizeFourteen"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/log_out"
                            android:gravity="center"
                            android:textColor="#3ec991" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>


